fix: margin padding between buttons
On mobile view, the buttons were overlapping.

--- a/src/sweetalert2.scss
+++ b/src/sweetalert2.scss
@@ -109,7 +109,7 @@ body {
     cursor: pointer;
     font-size: 17px;
     font-weight: 500;
-    margin: 0 5px;
+    margin: 15px 5px 0;
     padding: 10px 32px;
 
     &:not(.swal2-loading) {
